test/Fail/DuplicateConstructors.err
DuplicateConstructors.agda:5.3-7.6: error: [DuplicateConstructors]
Duplicate constructors in datatype: c d e
when scope checking the declaration
  data D where
    c : D
    c : D
    d : D
    d : D
    e : D
    e : D
